# qrng-algorithms

./: .gitignore  CMakeLists.txt  README.md
docs/: DETAILED_RESULTS.md  HOW_ALGORITHMS_WORK.md  TESTING_METHODOLOGY.md  overview.md  technical.md
include/: qrng.h
src/: compare_algorithms.cpp  main.cpp  qrng.cpp  randomness_tester.cpp
tests/: CMakeLists.txt  test_qrng.cpp
